# Foodini

./: .env.example  .gitignore  .pre-commit-config.yaml  API.md  LICENSE  README.md  db_schema.pgerd  diet_generation_stats.csv  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Settings.py  api.html  logging_config.yaml  mail.py  main.py  openapi.json  pyproject.toml  pytest.ini  requirements.txt  settings.py
backend/assets/: stress_pb2.py
backend/barcode_scanning/: barcode_scanning_router.py  barcode_scanning_service.py  dependencies.py
backend/core/: custom_exception_code.py  database.py  db_listeners.py  health.py  limiter.py  logger.py  migrate.py  not_found_in_database_exception.py  role_sets.py  security.py  status_code.py  user_authorisation_service.py  value_error_exception.py
backend/daily_summary/: admin_daily_summary_router.py  composed_meal_items_service.py  daily_summary_gateway.py  daily_summary_mapper.py  daily_summary_repository.py  daily_summary_router.py  daily_summary_service.py  dependencies.py  schemas.py
backend/diet_generation/: daily_meals_generator_service.py  daily_summary_repository.py  daily_summary_router.py  daily_summary_service.py  dependencies.py  diet_generation_router.py  diet_generation_service.py  diet_valdiation_service.py  last_generated_meals_repository.py  mappers.py  meal_icons_repository.py  meal_recipes_repository.py  meal_repository.py  schemas.py
backend/diet_prediction/: daily_summary_repository.py  daily_summary_router.py  daily_summary_service.py  dependencies.py  diet_prediction_router.py  diet_prediction_service.py  meal_icons_repository.py  meal_recipes_repository.py  schemas.py
backend/meals/: dependencies.py  meal_gateway.py  meal_router.py  meal_service.py  schemas.py
backend/models/: __init__.py  composed_meal_item.py  composed_meal_item_model.py  daily_macros_summary_model.py  daily_summary_model.py  meal_icon_model.py  meal_model.py  meal_recipe_model.py  meal_type_daily_summary.py  meals_daily_summary.py  types.py  unit_translation.py  user_daily_summary_model.py  user_details_model.py  user_diet_prediction_model.py  user_model.py  user_properties_models.py  user_role.py  user_weight_history_model.py
backend/open_food_facts/: dependencies.py  open_food_facts_gateway.py  open_food_facts_router.py  open_food_facts_service.py  schemas.py
backend/templates/: 404.html
backend/user_datails/: models.py  schemas.py  user_details_repository.py
backend/user_details/: calories_prediction_repository.py  calories_prediction_router.py  dependencies.py  (+6 more)
(+494 files in other folders)
