[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosmtplib>=4.0.2",
    "annotated-types>=0.7.0",
    "anyio>=4.11.0",
    "async-timeout>=5.0.1",
    "asyncpg>=0.30.0",
    "attrs>=25.4.0",
    "authlib>=1.6.5",
    "bcrypt>=5.0.0",
    "blinker>=1.9.0",
    "certifi>=2025.11.12",
    "cffi>=2.0.0",
    "cfgv>=3.5.0",
    "charset-normalizer>=3.4.4",
    "click>=8.3.1",
    "colorama>=0.4.6",
    "coverage>=7.12.0",
    "cryptography>=46.0.3",
    "distlib>=0.4.0",
    "dnspython>=2.8.0",
    "email-validator>=2.3.0",
    "fastapi>=0.121.3",
    "fastapi-cli>=0.0.16",
    "fastapi-jwt-auth>=0.5.0",
    "fastapi-mail>=1.5.8",
    "filelock>=3.20.0",
    "greenlet>=3.2.4",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httptools>=0.7.1",
    "httpx>=0.28.1",
    "identify>=2.6.15",
    "idna>=3.11",
    "iniconfig>=2.3.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "langchain-core>=1.1.0",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.3",
    "langgraph-checkpoint>=3.0.1",
    "langgraph-prebuilt>=1.0.5",
    "langgraph-sdk>=0.2.9",
    "langsmith>=0.4.46",
    "markdown-it-py>=4.0.0",
    "markupsafe>=3.0.3",
    "mdurl>=0.1.2",
    "nodeenv>=1.9.1",
    "ollama>=0.6.1",
    "orjson>=3.11.4",
    "ormsgpack>=1.12.0",
    "packaging>=25.0",
    "passlib>=1.7.4",
    "platformdirs>=4.5.0",
    "pluggy>=1.6.0",
    "pre-commit>=4.5.0",
    "protobuf>=6.33.1",
    "psycopg2>=2.9.11",
    "pycountry>=24.6.1",
    "pycparser>=2.23",
    "pydantic>=2.12.4",
    "pydantic-core>=2.41.5",
    "pydantic-settings>=2.12.0",
    "pygments>=2.19.2",
    "pyjwt>=1.7.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-html>=4.1.1",
    "pytest-metadata>=3.1.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "requests-toolbelt>=1.0.0",
    "rich>=14.2.0",
    "rich-toolkit>=0.16.0",
    "ruff>=0.14.6",
    "shellingham>=1.5.4",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "starlette>=0.50.0",
    "tenacity>=9.1.2",
    "typer>=0.20.0",
    "typing-extensions>=4.15.0",
    "urllib3>=2.5.0",
    "uvicorn>=0.38.0",
    "virtualenv>=20.35.4",
    "watchfiles>=1.1.1",
    "websockets>=15.0.1",
    "xxhash>=3.6.0",
    "zstandard>=0.25.0",
]
